--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
-}
+.tableWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    background-color: rgba(0, 0, 0, 0.363);
+    margin-left: 50px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.inputWrapper{
+    display: flex;
+    justify-content: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.TableContainer{
+    width: 144vh;
+    height: 200vh ;
 }
-
-.App-link {
-  color: #61dafb;
+body{
+    display: flex;
+    height: 200vh;
+    width: 100%;
+    background-color: rgb(240, 235, 235);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttonsWrapper{
+    padding-top: 5px;
+    gap: 2px;
+    display: flex;
+}
+.cardVenda{
+    height: 100vh;
+}
+.card{
+width:50vh ;
+height: 120vh;
 }
